@@ -878,6 +878,24 @@ name|SolrDispatchFilter
 implements|implements
 name|Filter
 block|{
+DECL|field|CONNECTION_HEADER
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CONNECTION_HEADER
+init|=
+literal|"Connection"
+decl_stmt|;
+DECL|field|TRANSFER_ENCODING_HEADER
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|TRANSFER_ENCODING_HEADER
+init|=
+literal|"Transfer-Encoding"
+decl_stmt|;
 DECL|field|log
 specifier|final
 name|Logger
@@ -3064,6 +3082,9 @@ expr_stmt|;
 for|for
 control|(
 name|Enumeration
+argument_list|<
+name|String
+argument_list|>
 name|e
 init|=
 name|req
@@ -3084,9 +3105,6 @@ init|=
 name|e
 operator|.
 name|nextElement
-argument_list|()
-operator|.
-name|toString
 argument_list|()
 decl_stmt|;
 name|con
@@ -3194,6 +3212,17 @@ expr_stmt|;
 for|for
 control|(
 name|Iterator
+argument_list|<
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|List
+argument_list|<
+name|String
+argument_list|>
+argument_list|>
+argument_list|>
 name|i
 init|=
 name|con
@@ -3217,58 +3246,79 @@ block|{
 name|Map
 operator|.
 name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|List
+argument_list|<
+name|String
+argument_list|>
+argument_list|>
 name|mapEntry
 init|=
-operator|(
-name|Map
-operator|.
-name|Entry
-operator|)
 name|i
 operator|.
 name|next
 argument_list|()
 decl_stmt|;
+name|String
+name|header
+init|=
+name|mapEntry
+operator|.
+name|getKey
+argument_list|()
+decl_stmt|;
+comment|// We pull out these two headers below because they can cause chunked
+comment|// encoding issues with Tomcat and certain clients
 if|if
 condition|(
-name|mapEntry
-operator|.
-name|getKey
-argument_list|()
+name|header
 operator|!=
 literal|null
-condition|)
-name|resp
+operator|&&
+operator|!
+name|header
 operator|.
-name|setHeader
+name|equals
 argument_list|(
-name|mapEntry
+name|TRANSFER_ENCODING_HEADER
+argument_list|)
+operator|&&
+operator|!
+name|header
 operator|.
-name|getKey
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-operator|(
-operator|(
-name|List
-operator|)
+name|equals
+argument_list|(
+name|CONNECTION_HEADER
+argument_list|)
+condition|)
+block|{
+for|for
+control|(
+name|String
+name|value
+range|:
 name|mapEntry
 operator|.
 name|getValue
 argument_list|()
-operator|)
+control|)
+block|{
+name|resp
 operator|.
-name|get
+name|addHeader
 argument_list|(
-literal|0
-argument_list|)
+name|mapEntry
 operator|.
-name|toString
+name|getKey
 argument_list|()
+argument_list|,
+name|value
 argument_list|)
 expr_stmt|;
+block|}
+block|}
 block|}
 name|resp
 operator|.
